# chartisto

./: .gitignore  .gitmodules  CMakeLists.txt  Chartisto.pro  README.md  chart.cpp  chart.h  chartisto_ru.ts  chartwidget.h  geometryremember.h  load.h  macdform.ui  main.cpp  mainwindow.h  painter.cpp  painter.h
chart/: CMakeLists.txt  chart.cpp  chart.h  data.h  ema.cpp  ema.h  indicators.cpp  indicators.h  macd.cpp  macd.h  reduce.cpp  reduce.h  stepFind.cpp  stepFind.h
chartisto/: .gitignore  CMakeLists.txt  chartisto.pro  chartisto.qrc  chartisto_ru.qm  chartisto_ru.ts  chartwidget.cpp  chartwidget.h  config.cpp  config.h  geometryremember.h  load.cpp  load.h  load.ui  macdform.cpp  macdform.h  macdform.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  saveas.cpp  saveas.h  saveas.ui  windowlist.cpp  windowlist.h
painter/: painter.cpp  painter.h  painter.pro
robotrade/: CMakeLists.txt  EMACross.cpp  EMACross.h  EntryAnalyzer.cpp  EntryAnalyzer.h  Levels.cpp  Levels.h  QuoteTool.cpp  emaCross.cpp  emaCross.h  entryAnalyzer.cpp  entryAnalyzer.h  levels.cpp  levels.h  levels.json  main.cpp  quoteTool.cpp  quotesParser.cpp  quotesParser.h  quotesparser.cpp  quotesparser.h  robotrade.cpp  robotrade_log.conf  todayQuotes.cpp  todayQuotes.h  trader.cpp  trader.h  tripleScreen.cpp  tripleScreen.h  triplescreen.cpp  triplescreen.h
robotrade/scripts/: for-days-seed  for-seeds-last-days  test-todayQuotes  test_todayQuotes.sh
screener/: CMakeLists.txt  Calcs.cpp  Calcs.h  DateDaysOps.h  ParseQuotess.cpp  ParseQuotess.h  ProcessTickers.cpp  ProcessTickers.h  Screen.cpp  Screen.h  Screener.cpp  ShowRet13612.cpp  ShowRet13612.h  SyncQuotes.cpp  SyncQuotes.h  Tiingo.cpp  TiingoApi.cpp  TiingoApi.h  TiingoHttp.cpp  Util.h  root_certificate.hpp  tiingo.cpp
test/: CMakeLists.txt  test.pro  testChart.cpp  testConstants.cpp  testIndicators.cpp  testRobotrade.cpp  testUtil.cpp  testchart.cpp  testconstants.cpp  testindicators.cpp  testpainter.cpp  testrobotrade.cpp
util/: Stream.h  ThreadPool.h  async.h  fnv.h  funcIterator.h  hash.h  hashCombine.h  hashes.h  log.h  stream.h  threadPool.h
ws/: CMakeLists.txt  decodeWs.cpp  pipeEdit.cpp  pipeSave.cpp
