cmake_minimum_required(VERSION 3.7.2)
set(CMAKE_CXX_STANDARD 14)
project(chartisto)

set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/date/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/fmt/include)
add_subdirectory(date)
add_subdirectory(fmt)
add_subdirectory(chart)
add_subdirectory(test)
add_subdirectory(chartisto)
add_subdirectory(robotrade)
